# slides

./: cnp.bat  pyproject.toml
docs/: rates.ipynb  rates_print.ipynb
