[project]
name = "slides"
version = "0.1.0"
description = ""
authors = [
    {name = "beginnerSC",email = "25188222+beginnerSC@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "jupyterlab (>=4.5.6,<5.0.0)",
    "voila (>=0.5.11,<0.6.0)",
    "ipywidgets (>=8.1.8,<9.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
]

[tool.poetry]
packages = [{include = "slides", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
